# Network-Traffic-Persistence-System

./: .gitignore  README.md
evaluation/: README.txt  evaluationplotter.py  writer100x_caida6_7.csv
evaluation/compression/: compression.txt  compressionbarchart.py
evaluation/reader/: evaluationplotter.py  query_complexity_plotter.py
evaluation/writer/: compression comparison.py  compression_comparison.py  ecdfplotter.py  evaluationplotter.py  step_duration_comparison.py
evaluation/writer/equinix-nyc.dirA.20180517-125910/: writer100x_caida1_6.csv
evaluation/writer/equinix-nyc.dirB.20180517-134900/: writer100x_caida6_7.csv
evaluation/writer/equinix-nyc.dirB.20180517-134900 (2)/: writer100x_own_traffic(2).csv
evaluation/writer/equinix-nyc.dirB.20180517-134900_2/: writer100x_caida6_7(2).csv
evaluation/writer/own_traffic/: writer100x_own_traffic.csv
implementation/: csvPlotter.py
implementation/_old/pcappp-test/: Makefile  main.cpp
implementation/_old/speetest-various/: om.h  (+3 more)
implementation/implementation_v3/: CMakeLists.txt  Makefile  README.txt  helpful_commands.txt  reader_evaluation.sh  writer_evaluation.sh
implementation/implentation/: Makefile
implementation/pcappp-test/: CMakeLists.txt  IPTuple.h  Makefile  main.cpp
implementation/project/: CMakeLists.txt  Makefile
implementation/speetest-various/: CMakeLists.txt  Packet.cpp  gpv.cpp  gpv.h  main.cpp  pcap_reader.cpp  pcap_reader.h  util.h
implementation/speetest-various/cmake/: pcapplusplus.cmake
implementation/speetest-various/model/: pcapentry.h
implementation/writer_v2/: CMakeLists.txt  Makefile
implementation/writer_v3/: CMakeLists.txt  Makefile  compression_tests.txt  writer_evaluation.sh
implementation/writer_v3/src/: main.cpp  reader_main.cpp  writer_main.cpp
implementation/writer_v3/src/Common/: CompressedBucket.h  Directory.h  IPTuple.h  MetaBucket.h
implementation/writer_v3/src/Converter/: Converter.h
implementation/writer_v3/src/Model/: AggregateST.h  CompressedBucket.h  Filter.h  IPTuple.h  MetaBucket.h  SortST.h
implementation/writer_v3/src/Reader/: Aggregator.h  Converter.h  Filter.h
implementation/writer_v3/src/Reader/ThreadOperations/: AggregationThread.h  OutThread.h  ReaderThread.h  WriterThread.h
implementation/writer_v3/src/Writer/: Converter.h  SortST.h
implementation/writer_v3/src/Writer/ThreadOperations/: AggregatorThread.h  CompressorThread.h  ConverterThread.h  LiveCaptureThread.h  ReaderThread.h  SorterThread.h  WriterThread.h
(+63 files in other folders)
